2008-08-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	Improve a workaround for secondary clicks that caused 
	problems with window frames and desktop icons. See bug #532934.

	* src/mt-main.h: Listen for focus changes.
	* src/mt-main.h: Add 'move-release' variable.

	* src/Makefile.am: Add new files.
	* src/mt-accessible.c: New file.
	* src/mt-accessible.h: New file.
	Add AT-SPI utility functions. Most of them aren't
	used yet.

2008-08-22 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-listener.c:
	* src/mt-listener.h:
	Create a MtListener object and move all at-spi signal related
	things to a new file.

	* src/mt-main.c: Use new listener object.
	* src/Makefile.am: Add new files.
	* po/POTFILES.skip: Add mt-listener.c

2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:(mt_main_request_logout): Fix argument type.

2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>

	* confiure.ac: remove libgnome and libgnomeui dependency
	* src/Makefile.am: use per-file CFLAGS.
	* src/mt-main.c: remove last bits of libgnome and libgnomeui

2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Use dbus instead of libgnomeui to communicate with
	the session manager.

2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/pointer-capture-applet.c:
	* src/dwell-click-applet.c:
	* src/mt-common.c:
	* src/mt-common.h:

	Switch to gtk_show_uri and move the code to mt-common.

	* configure.ac: Bump gtk requirement to 2.13.1
	* Makefile.am: Add --disable-scrollkeeper
	
	* help/mousetweaks.omf.in: Add .omf template
	* help/Makefile.am: Move legal.xml to DOC_ENTITIES
	* help/C/mousetweaks.xml: Add "maintainer" and "description" roles
	needed by scrollkeeper.

2008-08-18 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.91

2008-08-18 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.90 release.

2008-08-04 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:
